--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif32
 board = lolin_d32_pro
 framework = arduino
+lib_deps = 
+	miguelbalboa/MFRC522@^1.4.7
+	earlephilhower/ESP8266Audio@^1.7
+	me-no-dev/ESP Async WebServer@^1.2.3
